hard-gists/bcc376fb336b73f24b29/run.log
=== Docker Run Log for bcc376fb336b73f24b29 ===
Started at: Mi 29. Okt 19:38:36 CET 2025

[2025-10-29 19:38:37] START: Running container for bcc376fb336b73f24b29
[2025-10-29 19:38:37] SUCCESS: Container a9e4b2f2cf1163276d0fcc844f8b67d66f2ec99ed8ad0492ca4e38d904e66ca2 started for bcc376fb336b73f24b29
=== Container logs for bcc376fb336b73f24b29 ===
  File "/snippet.py", line 80
    os.mkdir(TMPDir, 0755 )
                     ^
SyntaxError: leading zeros in decimal integer literals are not permitted; use an 0o prefix for octal integers
=== End of logs for bcc376fb336b73f24b29 ===
[2025-10-29 19:38:39] INFO: Container a9e4b2f2cf1163276d0fcc844f8b67d66f2ec99ed8ad0492ca4e38d904e66ca2 has stopped
